[gd_scene load_steps=4 format=3 uid="uid://gqxfblqe82to"]

[ext_resource type="PackedScene" uid="uid://4af2ve2g5bho" path="res://scenes/snake.tscn" id="1_au0ln"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_wj633"]

[sub_resource type="LabelSettings" id="LabelSettings_j42q3"]
font_size = 41
font_color = Color(1, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_wj633")

[node name="Snake" parent="." instance=ExtResource("1_au0ln")]

[node name="DeathMessage" type="Label" parent="."]
offset_left = 274.0
offset_top = 284.0
offset_right = 384.0
offset_bottom = 341.0
text = "DEAD"
label_settings = SubResource("LabelSettings_j42q3")

[connection signal="hit" from="Snake" to="." method="_on_snake_hit"]
